# agent-first-psql

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  spore.core.json
.github/workflows/: ci.yml  release.yml
docs/: cli.md  design.md  mcp.md  reference.md
scripts/: test.sh  update.sh  upgrade.sh
src/: cli.rs  config.rs  conn.rs  db.rs  handler.rs  main.rs  mcp.rs  types.rs  writer.rs
tests/: cli_integration.rs  coverage_integration.rs  psql_compatibility.rs  runtime_integration.rs
tests/support/: unit_cli.rs  unit_config.rs  unit_conn.rs  unit_db.rs  unit_handler.rs  unit_main.rs  unit_mcp.rs  unit_types.rs
